build: home layout

--- a/src/app/@shared/toolbar/toolbar.component.html
+++ b/src/app/@shared/toolbar/toolbar.component.html
@@ -1,3 +1,7 @@
 <mat-toolbar color="primary">
-	Hello
+	<header class="d-flex">
+		<img alt="Cards Logo"
+			 routerLink="/home"
+			 src="./../../../assets/logos/playing-card_32.png">
+	</header>
 </mat-toolbar>
