--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div id="game-wrapper">
 	<div class="row game-top d-flex justify-content-around">
 		<app-player [player]="northWestPlayer$ | async">
 		</app-player>
