--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,9 +1,14 @@
+#game-wrapper {
+	height: calc(100% - 64px);
+	width: 100%;
+}
+
 .game-top {
-	height: 20vh;
+	height: 20%;
 }
 
 .game-middle {
-	height: calc(80vh - 240px);
+	height: calc(80% - 240px);
 }
 
 .game-bottom {
