--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,7 +1,20 @@
-<div class="d-flex justify-content-center align-items-center" id="header-wrapper">
-	<button [routerLink]="['/game']"
-			color="accent"
-			mat-flat-button>
-		{{ 'HOME.play' | translate }}
-	</button>
+<div class="d-flex justify-content-center align-items-center"
+	 id="header-wrapper">
+	<mat-card>
+		<mat-card-content>
+			<div class="p-4">
+				<div class="row d-flex justify-content-center pb-2">
+					<button color="accent"
+							mat-flat-button
+							routerLink="/game">
+						{{ 'HOME.playAnonymous' | translate }}
+					</button>
+				</div>
+				<div class="row d-flex justify-content-center">
+					<span>{{ 'HOME.trySignIn' | translate }}</span>
+				</div>
+			</div>
+		</mat-card-content>
+	</mat-card>
 </div>
+<!--<div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
