--- a/src/app/@shared/toolbar/toolbar.component.html
+++ b/src/app/@shared/toolbar/toolbar.component.html
@@ -1,7 +1,11 @@
 <mat-toolbar color="primary">
-	<header class="d-flex">
-		<img alt="Cards Logo"
-			 routerLink="/home"
-			 src="./../../../assets/logos/playing-card_32.png">
+	<header class="d-flex light-text">
+		<div class="pointer"
+			 routerLink="/home">
+			<img alt="Cards Logo"
+				 class="mr-3"
+				 src="./../../../assets/logos/playing-card_32.png">
+			<span>Play Tarot IO</span>
+		</div>
 	</header>
 </mat-toolbar>
