--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -13,6 +13,8 @@
 				<div class="row d-flex justify-content-center">
 					<span>{{ 'HOME.trySignIn' | translate }}</span>
 				</div>
+				<div class="row">
+				</div>
 			</div>
 		</mat-card-content>
 	</mat-card>
