--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,11 @@ body {
 	background: radial-gradient(white, $background);
 }
 
+.pointer {
+	cursor: pointer;
+}
+
+.light-text {
+	color: white;
+}
+
