--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "../../node_modules/font-awesome/css/font-awesome.css";
 @import "./themes/ftio-light/ftio-light";
 @import "./themes/ftio-light/colors";
 
@@ -15,7 +16,7 @@ body {
 	cursor: pointer;
 }
 
-.light-text {
+.white-text {
 	color: white;
 }
 
