--- a/src/styles/themes/ftio-light/_colors.scss
+++ b/src/styles/themes/ftio-light/_colors.scss
@@ -2,3 +2,8 @@ $primary: #ff6464;
 $accent: #db3056;
 $background: #ffb99a;
 $dark: #851d41;
+$facebook-blue: #3b5998;
+
+.background-facebook-blue {
+	background-color: $facebook-blue;
+}
