feat(4): firestore setup

--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -5,7 +5,7 @@
 			<div class="p-4">
 				<div class="row d-flex justify-content-center pb-2">
 					<button color="accent"
-					        (click)="queueService.fivePlayersGameJoinRequest()"
+					        (click)="gameAffectationService.quickGame()"
 					        mat-flat-button>
 						{{ 'HOME.playAnonymous' | translate }}
 					</button>
