feat(7): twitter auth

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,4 @@
 <mat-card>
 	<app-facebook-connect (connect)="signInWithFacebook()"></app-facebook-connect>
+	<app-twitter-connect (connect)="signInWithTwitter()"></app-twitter-connect>
 </mat-card>
