--- a/src/styles/themes/ftio-light/_colors.scss
+++ b/src/styles/themes/ftio-light/_colors.scss
@@ -3,7 +3,12 @@ $accent: #db3056;
 $background: #ffb99a;
 $dark: #851d41;
 $facebook-blue: #3b5998;
+$twitter-blue: #1da1f2;
 
 .background-facebook-blue {
 	background-color: $facebook-blue;
+}
+
+.background-twitter-blue {
+	background-color: $twitter-blue;
 }
