--- a/src/app/toolbar/user-menu/user-menu.component.html
+++ b/src/app/toolbar/user-menu/user-menu.component.html
@@ -4,7 +4,7 @@
 	<span class="pr-3">
 		{{ user.displayName }}
 	</span>
-	<img [src]="user.photoURL"
+	<img [src]="user.avatarUrl"
 	     alt="User avatar"
 	     height="35"
 	     width="35">
