feat(21): toolbar ui

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,17 +1,20 @@
-<mat-toolbar color="primary">
-	<header class="w-100 d-flex justify-content-between white-text">
-		<div class="pointer d-flex align-items-center"
+<header class="d-flex justify-content-between white-text">
+	<div class="d-flex align-items-center">
+		<div class="pointer d-flex align-items-center pl-2 pr-4"
 		     routerLink="/home">
 			<img alt="Cards Logo"
 			     class="mr-3"
 			     src="../../assets/logos/playing-card_32.png">
 			<span>Play Tarot IO</span>
 		</div>
-		<div *ngIf="(currentUser$ | async) as currentUser; else connect">
-			<app-user-menu [user]="currentUser"></app-user-menu>
-		</div>
-	</header>
-</mat-toolbar>
+		<app-tabs></app-tabs>
+	</div>
+	<div *ngIf="(currentUser$ | async) as currentUser; else connect"
+	     class="align-items-center">
+		<app-user-menu [user]="currentUser"></app-user-menu>
+	</div>
+</header>
+
 <ng-template #connect>
 	<app-connect></app-connect>
 </ng-template>
