feat(21): user avatar

--- a/src/app/@shared/player-card/player-card.component.html
+++ b/src/app/@shared/player-card/player-card.component.html
@@ -1,5 +1,7 @@
 <mat-card>
 	<div *ngIf="player">
+		<app-avatar [url]="player.userAvatarUrl"
+		            class="mr-3"></app-avatar>
 		{{ player?.userDisplayName }}
 	</div>
 </mat-card>
